syntax = "proto3";

package example_v1;

option go_package = "github.com/t34-dev/go-grpc-pool/example/pkg/example_v1;example_v1";

service ExampleService {
	rpc GetLen(TxtRequest) returns (TxtResponse) {}
}

message TxtRequest {
	string text = 1;
}
message TxtResponse {
	uint32 number = 1;
}
